<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="workout_overview__title">Your Workout</string>
    <string name="login__title">Login</string>
    <string name="workout__finish">finish</string>
    <string name="workout__cancel">@android:string/cancel</string>
    <string name="workout__finish_description">finish the workout and send results</string>
    <string name="workout__cancel_description">cancel workout and dismiss results</string>
    <string name="workout_overview__todays_workout_title">Today\'s workout</string>
    <string name="workout_overview__todays_workout_hint">Today\'s workout contains of:</string>
    <string name="workout_overview__start_workout">Start Workout</string>
    <string name="expandable_card__more">More</string>
    <string name="expandable_card__less">Less</string>
    <string name="application__label">Ready Set Move – Personal Workouts</string>
    <string name="workout_overview__screen_title">Workout Overview</string>
    <string name="workout_exercise_overview__title">Active Exercise</string>
    <string name="workout_exercise_overview__start">Start Exercise</string>
    <string name="workout_set_results__title">Set Results</string>
    <string name="workout_set_results__rate">Rate Set</string>
    <string name="workout_exercise_results__title">Exercise Results</string>
    <string name="workout_exercise_results__rate">Rate Exercise</string>
    <string name="navigation__back">Go back</string>
    <string name="device_management_overview__screen_title">Devices</string>
    <string name="device_management_overview__scan">Scan for device</string>
    <string name="grant_permissions__screen_title">Permissions</string>
    <string name="settings__screen_title">Settings</string>
</resources>